@@ -10,12 +10,12 @@ url="http://repo.or.cz/w/awish.git"
 license=('GPL3' 'custom:abandonware')
 depends=('sdl_mixer' 'sh')
 
-source=('http://repo.or.cz/w/awish.git/snapshot/881037d9e0afbf6bcabd812938748cbf195a8382.tar.gz'
-        'http://files.abandonia.com/download.php?game=Avish&secure=4e1cdca4ae96348f0fcf3a6f49776368&td=1332682105'
+source=("${pkgname}-${pkgver}.tar.gz::http://repo.or.cz/w/awish.git/snapshot/881037d9e0afbf6bcabd812938748cbf195a8382.tar.gz"
+        'Avish.zip::http://files.abandonia.com/download.php?game=Avish&secure=4e1cdca4ae96348f0fcf3a6f49776368&td=1332682105'
         "${pkgname}.sh"
         "${pkgname}.desktop")
 
-md5sums=('88bbea30252a28bee9707419374bb9a6'
+md5sums=('dfed64a68ff69f6737a43e3d20b0cb98'
          '08e07a049ae29529c255b0ae236e0806'
          '95d06e7efc8669f4f1e657024b0c6432'
          '8673f646ccdca6ef8caf2ae9e3a2dcda')
