@@ -1,13 +1,13 @@
 # Maintainer: Nick Lanham <nick@afternight.org>
 pkgname=drmr-git
 pkgver=20120227
-pkgrel=2
+pkgrel=3
 pkgdesc="DrMr is an LV2 sampler plugin that can play Hydrogen drumkits"
 arch=('i686' 'x86_64')
 license=('GPL')
 url="https://github.com/nicklan/drmr"
 groups=('drmr')
-depends=('libsndfile' 'libsamplerate' 'expat' 'lv2core')
+depends=('libsndfile' 'libsamplerate' 'expat' 'lv2core' 'lv2-event' 'lv2-uri-map' 'lv2-ui')
 makedepends=('git')
 provides=('drmr')
 conflicts=('drmr')
