@@ -1,15 +1,15 @@
 # Contributor: M Rawash <mrawash _stange_curved_character_ gmail D0T com>
 # Maintainer: matthiaskrgr <matthiaskrgr _strange_curverd_character_ freedroid D0T org>
 pkgname=freedroidrpg-git
-pkgver=20120311
+pkgver=20120325
 pkgrel=1
 pkgdesc="A science fiction role playing game which tells the story of a world destroyed by a conflict between robots and their human masters - development version"
 url="http://www.freedroid.org"
 license=('GPL')
 arch=('i686' 'x86_64')
-#makedepends=('git' 'python' 'optipng' 'jpegoptim' 'gawk')
-makedepends=('git' 'python')
-depends=('lua' 'sdl' 'sdl_image' 'libgl' 'sdl_mixer' 'sdl_gfx' 'libogg' 'libvorbis')
+#makedepends=('git' 'optipng' 'jpegoptim' 'gawk')
+makedepends=('git')
+depends=('lua' 'sdl' 'sdl_image' 'libgl' 'sdl_mixer' 'sdl_gfx' 'libogg' 'libvorbis' 'python')
 #optdepends=('espeak: used to generate the bot voice samples, actually not needed at build or runtime, thus commented')
 optdepends=('mesa: to run the game in opengl mode')
 conflicts=('freedroidrpg' 'freedroidrpg-svn')
@@ -20,7 +20,7 @@ source=("http://buildbot.freedroid.org/logo.png"
         "changelog")
 sha1sums=('4a9b3ffadae7367c0f30025370cb7d27ba38fcc1'
           '463708161658e15aa555de14ef18ea1fcc0a2758'
-          '0c40336c5c1d9e9f0a844330320284aa290ce07a')
+          'b4570953d3d19b42a93aa3585e14eb7ef7dc0685')
 
 _gitroot="git://freedroid.git.sourceforge.net/gitroot/freedroid/freedroid"
 _gitname="freedroid"
@@ -33,6 +33,7 @@ build() {
 	if [[ -d $srcdir/$_gitname ]] ; then
 		msg "Removing build files"
 		git clean -dfx
+		# git reset --hard HEAD
 		cd $_gitname
 		msg "Updating..."
 		git pull origin
