@@ -1,3 +1,5 @@
+Version 20120325
+ * Make python a dependency instead of make-dependency.
 Version 20120311
  * Replace makedepends subversion and rsync by git
 Version 20120310
